--- a/index.html
+++ b/index.html
@@ -13,11 +13,22 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
     <!-- FontAwesome JS-->
     <script defer src="assets/fontawesome/js/all.min.js"></script>
+    <style>
+        body {
+            font-family: 'Roboto', Arial, sans-serif;
+        }
+        .floating-btn {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1000;
+        }
+    </style>
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="assets/css/pillar-1.css">
   </head>
   <body>
-    <article class="resume-wrapper text-center position-relative">
+    <article class="resume-wrapper text-center position-relative" id="download-pdf">
       <div class="resume-wrapper-inner mx-auto text-start bg-white shadow-lg">
         <header class="resume-header pt-4 pt-md-0">
           <div class="row">
