--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
           <section class="resume-section summary-section mb-5">
             <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
             <div class="resume-section-content">
-              <p class="mb-0"> Experienced Software Engineer specializing in e-commerce applications, particularly in Spree Ecommerce, with 3 years of experience. Proficient in Ruby on Rails and adept in project management. Known for fostering robust client relationships, and consistently delivering user-centric solutions. <br>
-                <br> My commitment to innovation drives me to exceed project milestones and create impactful, high-quality outcomes.
+              <p class="mb-0">Software Developer with 3 years of experience in full-stack development using Ruby on Rails, specializing in e-commerce platforms and mobile application development. Familiar with cloud platforms like AWS and DigitalOcean through project work. Currently building knowledge in network security, encryption techniques, and secure software architecture.
               </p>
             </div>
           </section>
